--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "hooverGame",
   "version": "0.0.2",
   "private": true,
-   "homepage": "http://www.gwilym.com/hoover",
+  "homepage": "http://www.gwilym.com/hoover",
   "dependencies": {
     "caniuse": "^0.1.3",
     "caniuse-db": "^1.0.30000670",
     "classnames": "^2.2.5",
+    "expect": "^1.20.2",
     "immutable": "^3.8.1",
     "immutable-ext": "^1.0.8",
     "material-design-icons": "^3.0.1",
@@ -22,6 +23,7 @@
     "react-redux-form": "^1.11.1",
     "react-toolbox": "^2.0.0-beta.8",
     "redux": "^3.6.0",
+    "redux-mock-store": "^1.2.3",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
