--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hooverGame",
   "version": "0.0.2",
   "private": true,
-  "homepage": "http://www.gwilym.com/hoover",
+  "homepage": "https://gwildar.github.io/hoover/build/",
   "dependencies": {
     "caniuse": "^0.1.3",
     "caniuse-db": "^1.0.30000670",
@@ -69,7 +69,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "jest": {
     "collectCoverageFrom": [
