--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "caniuse-db": "^1.0.30000670",
     "classnames": "^2.2.5",
     "expect": "^1.20.2",
+    "gh-pages": "^1.0.0",
     "immutable": "^3.8.1",
     "immutable-ext": "^1.0.8",
     "material-design-icons": "^3.0.1",
